--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -3,126 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Clone</title>
+    <title>ChatGPT (LLaMA 3) Clone</title>
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
+    
+    <style>
+        body {
+            font-family: 'Palanquin Dark', sans-serif;
+            background-color: #000;
+            color: white;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-<style>
-   body {
-    font-family: Arial, sans-serif;
-    background-color: #343541;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+        .chat-container {
+            width: 600px;
+            max-width: 95%;
+            background-color: #111;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            display: flex;
+            flex-direction: column;
+            height: 80vh;
+        }
 
-.chat-container {
-    width: 400px;
-    max-width: 90%;
-    background-color: #444654;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
+        .chat-box {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+        }
 
-.chat-box {
-    height: 400px;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+        .message {
+            display: flex;
+            margin-bottom: 12px;
+        }
 
-.message {
-    display: flex;
-    margin-bottom: 10px;
-}
+        .message.user {
+            justify-content: flex-end;
+        }
 
-.message.user {
-    justify-content: flex-end;
-}
+        .message.ai {
+            justify-content: flex-start;
+        }
 
-.message.ai {
-    justify-content: flex-start;
-}
+        .bubble {
+            padding: 12px;
+            border-radius: 8px;
+            max-width: 75%;
+            word-wrap: break-word;
+            white-space: pre-wrap;
+        }
 
-.bubble {
-    padding: 10px;
-    border-radius: 8px;
-    max-width: 75%;
-    word-wrap: break-word;
-}
+        .user .bubble {
+            background-color: white;
+            color: black;
+        }
 
-.user .bubble {
-    background-color: #0A84FF;
-    color: white;
-}
+        .ai .bubble {
+            background-color: #222;
+            color: white;
+        }
 
-.ai .bubble {
-    background-color: #575A6A;
-    color: white;
-}
+        /* Code block styling with Prism.js */
+        .bubble pre {
+            background-color: #000;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+            font-family: monospace;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
 
-/* Style code blocks */
-.bubble pre {
-    background-color: #2E2F38;
-    padding: 10px;
-    border-radius: 5px;
-    overflow-x: auto;
-    font-family: monospace;
-}
+        /* Inline code */
+        .bubble code {
+            background-color: #333;
+            padding: 2px 4px;
+            border-radius: 3px;
+            font-family: monospace;
+        }
 
-/* Style inline code */
-.bubble code {
-    background-color: #22232A;
-    padding: 2px 4px;
-    border-radius: 3px;
-    font-family: monospace;
-}
+        /* Links */
+        .bubble a {
+            color: white;
+            text-decoration: none;
+            border-bottom: 1px solid white;
+        }
 
-/* Links inside AI messages */
-.bubble a {
-    color: #00AFFF;
-    text-decoration: none;
-}
+        .bubble a:hover {
+            text-decoration: underline;
+        }
 
-.bubble a:hover {
-    text-decoration: underline;
-}
+        .input-container {
+            display: flex;
+            padding: 15px;
+            background-color: #222;
+        }
 
-.input-container {
-    display: flex;
-    padding: 10px;
-    background-color: #40414F;
-}
+        textarea {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            background-color: #111;
+            color: white;
+            outline: none;
+            resize: none;
+            height: 40px;
+            min-height: 40px;
+            max-height: 150px;
+        }
 
-input {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    background-color: #2E2F38;
-    color: white;
-    outline: none;
-}
+        /* Auto-expand textarea */
+        textarea:focus {
+            height: auto;
+        }
 
-button {
-    margin-left: 10px;
-    padding: 10px;
-    border: none;
-    background-color: #0A84FF;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-}
+        /* Send button */
+        button {
+            margin-left: 10px;
+            padding: 10px;
+            border: none;
+            background-color: white;
+            color: black;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 
-button:hover {
-    background-color: #007BFF;
-}
+        button:hover {
+            background-color: #ddd;
+        }
 
+        /* Animated Thinking Dots */
+        .thinking {
+            display: inline-block;
+            font-size: 18px;
+        }
+
+        .thinking span {
+            animation: blink 1.5s infinite;
+        }
+
+        .thinking span:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .thinking span:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes blink {
+            0% { opacity: 0.2; }
+            50% { opacity: 1; }
+            100% { opacity: 0.2; }
+        }
     </style>
 </head>
 <body>
@@ -134,109 +178,90 @@ button:hover {
             </div>
         </div>
         <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." autocomplete="off">
+            <textarea id="user-input" placeholder="Type a message..." autocomplete="off"></textarea>
             <button id="send-btn">➤</button>
         </div>
     </div>
 
-    <script>const apiKey = "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"; // Replace with your Groq API key
-const chatBox = document.getElementById("chat-box");
-const userInput = document.getElementById("user-input");
-const sendButton = document.getElementById("send-btn");
+    <script>
+        const apiKey = "YOUR_GROQ_API_KEY";
+        const chatBox = document.getElementById("chat-box");
+        const userInput = document.getElementById("user-input");
+        const sendButton = document.getElementById("send-btn");
+        const model = "llama3-8b-8192";
 
-const model = "llama3-8b-8192"; // 🔥 Change to "llama3-70b-8192" for the 70B model
+        function renderMarkdown(text) {
+            text = text.replace(/```([\s\S]*?)```/g, function(match, code) {
+                return `<pre><code class="language-js">${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code></pre>`;
+            });
 
-// Function to safely render Markdown with code sanitization
-function renderMarkdown(text) {
-    // Escape < and > inside code blocks to prevent execution
-    text = text.replace(/```([\s\S]*?)```/g, function(match, code) {
-        return `<pre>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</pre>`;
-    });
+            text = text.replace(/`(.*?)`/g, function(match, code) {
+                return `<code>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code>`;
+            });
 
-    // Render inline code safely
-    text = text.replace(/`(.*?)`/g, function(match, code) {
-        return `<code>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code>`;
-    });
+            text = text
+                .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>")
+                .replace(/\*(.*?)\*/g, "<i>$1</i>")
+                .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>');
 
-    // Convert basic Markdown to HTML
-    text = text
-        .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>") // Bold **text**
-        .replace(/\*(.*?)\*/g, "<i>$1</i>") // Italic *text*
-        .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>'); // Links
+            return DOMPurify.sanitize(text);
+        }
 
-    return DOMPurify.sanitize(text); // Final sanitization
-}
+        async function sendMessage() {
+            const userMessage = userInput.value.trim();
+            if (!userMessage) return;
 
-// Send user input to AI
-async function sendMessage() {
-    const userMessage = userInput.value.trim();
-    if (!userMessage) return;
+            displayMessage(userMessage, "user");
+            userInput.value = "";
 
-    // Display user message
-    displayMessage(userMessage, "user");
-    userInput.value = "";
+            const loadingMessage = displayMessage(`<span class="thinking">.<span>.</span><span>.</span></span>`, "ai", true);
 
-    // Show "thinking" message
-    const loadingMessage = displayMessage("Thinking...", "ai");
+            try {
+                const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "Authorization": `Bearer ${apiKey}`
+                    },
+                    body: JSON.stringify({
+                        model: model,
+                        messages: [{ role: "user", content: userMessage }]
+                    })
+                });
 
-    try {
-        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": `Bearer ${apiKey}`
-            },
-            body: JSON.stringify({
-                model: model,
-                messages: [{ role: "user", content: userMessage }]
-            })
+                const data = await response.json();
+                let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
+
+                chatBox.removeChild(loadingMessage);
+                displayMessage(renderMarkdown(aiMessage), "ai", true);
+                Prism.highlightAll(); // Apply syntax highlighting
+            } catch (error) {
+                console.error("Error:", error);
+                chatBox.removeChild(loadingMessage);
+                displayMessage("Error communicating with AI.", "ai");
+            }
+        }
+
+        function displayMessage(text, sender, isHTML = false) {
+            const messageDiv = document.createElement("div");
+            messageDiv.classList.add("message", sender);
+            const bubbleDiv = document.createElement("div");
+            bubbleDiv.classList.add("bubble");
+
+            bubbleDiv.innerHTML = isHTML ? text : DOMPurify.sanitize(text);
+            
+            messageDiv.appendChild(bubbleDiv);
+            chatBox.appendChild(messageDiv);
+            chatBox.scrollTop = chatBox.scrollHeight;
+
+            return bubbleDiv;
+        }
+
+        sendButton.addEventListener("click", sendMessage);
+        userInput.addEventListener("keypress", (event) => {
+            if (event.key === "Enter") sendMessage();
         });
+    </script>
 
-        const data = await response.json();
-        let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
-
-        // Remove "thinking" message and display response
-        chatBox.removeChild(loadingMessage);
-        displayMessage(renderMarkdown(aiMessage), "ai", true);
-    } catch (error) {
-        console.error("Error:", error);
-        chatBox.removeChild(loadingMessage);
-        displayMessage("Error communicating with AI.", "ai");
-    }
-}
-
-// Function to display messages
-function displayMessage(text, sender, isHTML = false) {
-    const messageDiv = document.createElement("div");
-    messageDiv.classList.add("message", sender);
-
-    const bubbleDiv = document.createElement("div");
-    bubbleDiv.classList.add("bubble");
-
-    if (isHTML) {
-        bubbleDiv.innerHTML = text; // Render HTML for AI messages
-    } else {
-        bubbleDiv.textContent = text; // Plain text for user messages
-    }
-
-    messageDiv.appendChild(bubbleDiv);
-    chatBox.appendChild(messageDiv);
-
-    // Scroll to bottom
-    chatBox.scrollTop = chatBox.scrollHeight;
-
-    return messageDiv;
-}
-
-// 🔥 Send message on button click
-sendButton.addEventListener("click", sendMessage);
-
-// 🔥 Send message on Enter key press
-userInput.addEventListener("keypress", (event) => {
-    if (event.key === "Enter") sendMessage();
-});
-
-
-</script>
 </body>
 </html>
