--- a/chatti.html
+++ b/chatti.html
@@ -160,7 +160,7 @@
     </div>
 
     <script>
-        const apiKey = "YOUR_GROQ_API_KEY";
+        const apiKey = "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";
         const chatBox = document.getElementById("chat-box");
         const userInput = document.getElementById("user-input");
         const sendButton = document.getElementById("send-btn");
