--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -7,122 +7,139 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
 
 <style>
-   body {
-    font-family: Arial, sans-serif;
-    background-color: #343541;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+    body {
+            font-family: 'Palanquin Dark', sans-serif;
+            background-color: #000;
+            color: white;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-.chat-container {
-    width: 400px;
-    max-width: 90%;
-    background-color: #444654;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
+        .chat-container {
+            width: 600px;
+            max-width: 95%;
+            background-color: #111;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            display: flex;
+            flex-direction: column;
+            height: 80vh;
+        }
 
-.chat-box {
-    height: 400px;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+        .chat-box {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+        }
 
-.message {
-    display: flex;
-    margin-bottom: 10px;
-}
+        .message {
+            display: flex;
+            margin-bottom: 12px;
+        }
 
-.message.user {
-    justify-content: flex-end;
-}
+        .message.user {
+            justify-content: flex-end;
+        }
 
-.message.ai {
-    justify-content: flex-start;
-}
+        .message.ai {
+            justify-content: flex-start;
+        }
 
-.bubble {
-    padding: 10px;
-    border-radius: 8px;
-    max-width: 75%;
-    word-wrap: break-word;
-}
+        .bubble {
+            padding: 12px;
+            border-radius: 8px;
+            max-width: 75%;
+            word-wrap: break-word;
+            white-space: pre-wrap;
+        }
 
-.user .bubble {
-    background-color: #0A84FF;
-    color: white;
-}
+        .user .bubble {
+            background-color: white;
+            color: black;
+        }
 
-.ai .bubble {
-    background-color: #575A6A;
-    color: white;
-}
+        .ai .bubble {
+            background-color: #222;
+            color: white;
+        }
 
-/* Style code blocks */
-.bubble pre {
-    background-color: #2E2F38;
-    padding: 10px;
-    border-radius: 5px;
-    overflow-x: auto;
-    font-family: monospace;
-}
+        /* Code block styling */
+        .bubble pre {
+            background-color: #000;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+            font-family: monospace;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
 
-/* Style inline code */
-.bubble code {
-    background-color: #22232A;
-    padding: 2px 4px;
-    border-radius: 3px;
-    font-family: monospace;
-}
+        /* Inline code */
+        .bubble code {
+            background-color: #333;
+            padding: 2px 4px;
+            border-radius: 3px;
+            font-family: monospace;
+        }
 
-/* Links inside AI messages */
-.bubble a {
-    color: #00AFFF;
-    text-decoration: none;
-}
+        /* Links */
+        .bubble a {
+            color: white;
+            text-decoration: none;
+            border-bottom: 1px solid white;
+        }
 
-.bubble a:hover {
-    text-decoration: underline;
-}
+        .bubble a:hover {
+            text-decoration: underline;
+        }
 
-.input-container {
-    display: flex;
-    padding: 10px;
-    background-color: #40414F;
-}
+        .input-container {
+            display: flex;
+            padding: 15px;
+            background-color: #222;
+        }
 
-input {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    background-color: #2E2F38;
-    color: white;
-    outline: none;
-}
+        textarea {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            background-color: #111;
+            color: white;
+            outline: none;
+            resize: none;
+            height: 40px;
+            min-height: 40px;
+            max-height: 150px;
+        }
 
-button {
-    margin-left: 10px;
-    padding: 10px;
-    border: none;
-    background-color: #0A84FF;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-}
+        /* Auto-expand textarea */
+        textarea:focus {
+            height: auto;
+        }
 
-button:hover {
-    background-color: #007BFF;
-}
+        /* Send button */
+        button {
+            margin-left: 10px;
+            padding: 10px;
+            border: none;
+            background-color: white;
+            color: black;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 
+        button:hover {
+            background-color: #ddd;
+        }
     </style>
 </head>
 <body>
