--- a/meta-llama-3test.html
+++ b/meta-llama-3test.html
@@ -154,8 +154,8 @@
                 <div class="bubble">Hello! How can I assist you today?</div>
             </div>
         </div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." autocomplete="off">
+       <div class="input-container">
+            <textarea id="user-input" placeholder="Type a message..." autocomplete="off"></textarea>
             <button id="send-btn">➤</button>
         </div>
     </div>
