--- a/chatti.html
+++ b/chatti.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT (LLaMA 3) Clone</title>
-    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;700&display=swap" rel="stylesheet">
+    <title>ChatGPT Clone</title>
+      <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
-    
-    <style>
-        body {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
+
+<style>
+    body {
             font-family: 'Palanquin Dark', sans-serif;
             background-color: #000;
             color: white;
@@ -153,91 +154,110 @@
                 <div class="bubble">Hello! How can I assist you today?</div>
             </div>
         </div>
-        <div class="input-container">
+       <div class="input-container">
             <textarea id="user-input" placeholder="Type a message..." autocomplete="off"></textarea>
             <button id="send-btn">➤</button>
         </div>
     </div>
 
-    <script>
-        const apiKey = "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";
-        const chatBox = document.getElementById("chat-box");
-        const userInput = document.getElementById("user-input");
-        const sendButton = document.getElementById("send-btn");
-        const model = "llama3-8b-8192";
+    <script>const apiKey = "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"; // Replace with your Groq API key
+const chatBox = document.getElementById("chat-box");
+const userInput = document.getElementById("user-input");
+const sendButton = document.getElementById("send-btn");
 
-        function renderMarkdown(text) {
-            text = text.replace(/```([\s\S]*?)```/g, function(match, code) {
-                return `<pre><code class="language-js">${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code></pre>`;
-            });
+const model = "llama3-8b-8192"; // 🔥 Change to "llama3-70b-8192" for the 70B model
 
-            text = text.replace(/`(.*?)`/g, function(match, code) {
-                return `<code>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code>`;
-            });
+// Function to safely render Markdown with code sanitization
+function renderMarkdown(text) {
+    // Escape < and > inside code blocks to prevent execution
+    text = text.replace(/```([\s\S]*?)```/g, function(match, code) {
+        return `<pre>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</pre>`;
+    });
 
-            text = text
-                .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>")
-                .replace(/\*(.*?)\*/g, "<i>$1</i>")
-                .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>');
+    // Render inline code safely
+    text = text.replace(/`(.*?)`/g, function(match, code) {
+        return `<code>${DOMPurify.sanitize(code.replace(/</g, "&lt;").replace(/>/g, "&gt;"))}</code>`;
+    });
 
-            return DOMPurify.sanitize(text);
-        }
+    // Convert basic Markdown to HTML
+    text = text
+        .replace(/\*\*(.*?)\*\*/g, "<b>$1</b>") // Bold **text**
+        .replace(/\*(.*?)\*/g, "<i>$1</i>") // Italic *text*
+        .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>'); // Links
 
-        async function sendMessage() {
-            const userMessage = userInput.value.trim();
-            if (!userMessage) return;
+    return DOMPurify.sanitize(text); // Final sanitization
+}
 
-            displayMessage(userMessage, "user");
-            userInput.value = "";
+// Send user input to AI
+async function sendMessage() {
+    const userMessage = userInput.value.trim();
+    if (!userMessage) return;
 
-            const loadingMessage = displayMessage("Thinking...", "ai", true);
+    // Display user message
+    displayMessage(userMessage, "user");
+    userInput.value = "";
 
-            try {
-                const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "Authorization": `Bearer ${apiKey}`
-                    },
-                    body: JSON.stringify({
-                        model: model,
-                        messages: [{ role: "user", content: userMessage }]
-                    })
-                });
+    // Show "thinking" message
+    const loadingMessage = displayMessage("Thinking...", "ai");
 
-                const data = await response.json();
-                let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
-
-                chatBox.removeChild(loadingMessage);
-                displayMessage(renderMarkdown(aiMessage), "ai", true);
-                Prism.highlightAll(); // Apply syntax highlighting
-            } catch (error) {
-                console.error("Error:", error);
-                chatBox.removeChild(loadingMessage);
-                displayMessage("Error communicating with AI.", "ai");
-            }
-        }
-
-        function displayMessage(text, sender, isHTML = false) {
-            const messageDiv = document.createElement("div");
-            messageDiv.classList.add("message", sender);
-            const bubbleDiv = document.createElement("div");
-            bubbleDiv.classList.add("bubble");
-
-            bubbleDiv.innerHTML = isHTML ? text : DOMPurify.sanitize(text);
-            
-            messageDiv.appendChild(bubbleDiv);
-            chatBox.appendChild(messageDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
-
-            return bubbleDiv;
-        }
-
-        sendButton.addEventListener("click", sendMessage);
-        userInput.addEventListener("keypress", (event) => {
-            if (event.key === "Enter") sendMessage();
+    try {
+        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${apiKey}`
+            },
+            body: JSON.stringify({
+                model: model,
+                messages: [{ role: "user", content: userMessage }]
+            })
         });
-    </script>
 
+        const data = await response.json();
+        let aiMessage = data.choices?.[0]?.message?.content || "Sorry, I couldn't understand that.";
+
+        // Remove "thinking" message and display response
+        chatBox.removeChild(loadingMessage);
+        displayMessage(renderMarkdown(aiMessage), "ai", true);
+    } catch (error) {
+        console.error("Error:", error);
+        chatBox.removeChild(loadingMessage);
+        displayMessage("Error communicating with AI.", "ai");
+    }
+}
+
+// Function to display messages
+function displayMessage(text, sender, isHTML = false) {
+    const messageDiv = document.createElement("div");
+    messageDiv.classList.add("message", sender);
+
+    const bubbleDiv = document.createElement("div");
+    bubbleDiv.classList.add("bubble");
+
+    if (isHTML) {
+        bubbleDiv.innerHTML = text; // Render HTML for AI messages
+    } else {
+        bubbleDiv.textContent = text; // Plain text for user messages
+    }
+
+    messageDiv.appendChild(bubbleDiv);
+    chatBox.appendChild(messageDiv);
+
+    // Scroll to bottom
+    chatBox.scrollTop = chatBox.scrollHeight;
+
+    return messageDiv;
+}
+
+// 🔥 Send message on button click
+sendButton.addEventListener("click", sendMessage);
+
+// 🔥 Send message on Enter key press
+userInput.addEventListener("keypress", (event) => {
+    if (event.key === "Enter") sendMessage();
+});
+
+
+</script>
 </body>
 </html>
