--- a/settings-test.html
+++ b/settings-test.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: 'Palanquin Dark', sans-serif;
-            background-color: #111;
+            background-color: #111; /* Set page background color to #111 */
             color: white;
             display: flex;
             flex-direction: column;
@@ -48,6 +48,62 @@
         .input-group button:hover {
             background: #777;
         }
+
+        /* Switch style */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #444;
+            transition: .4s;
+            border-radius: 50px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            border-radius: 50px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: #fff; /* Set background to white when checked */
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px); /* Move the knob to the right when checked */
+            background-color: #111; /* Set knob color to dark when checked */
+        }
+
+        /* Focus and click effect */
+        input:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:active + .slider:before {
+            background-color: #2196F3;
+        }
     </style>
 </head>
 <body>
@@ -67,7 +123,10 @@
         <h3>About:Blank Cloaking</h3>
         <div class="input-group">
             <label class="label" for="about-blank">Open Site in about:blank: </label>
-            <input type="checkbox" id="about-blank">
+            <label class="switch">
+                <input type="checkbox" id="about-blank">
+                <span class="slider"></span>
+            </label>
         </div>
     </div>
     <div class="section" id="panic-key">
@@ -78,22 +137,12 @@
         </div>
         <div class="input-group">
             <label class="label" for="panic-key">Choose Panic Key: </label>
-            <select id="panic-key">
-                <option value="F1">F1</option>
-                <option value="F2">F2</option>
-                <option value="F3">F3</option>
-                <option value="F4">F4</option>
-                <option value="F5">F5</option>
-                <option value="F6">F6</option>
-                <option value="F7">F7</option>
-                <option value="F8">F8</option>
-                <option value="F9">F9</option>
-                <option value="F10">F10</option>
-                <option value="F11">F11</option>
-                <option value="F12">F12</option>
-                <option value="Escape">Escape</option>
-            </select>
+            <input type="text" id="panic-key" placeholder="Press your panic key here">
         </div>
+    </div>
+
+    <div class="input-group">
+        <button id="save-settings">Save Settings</button>
     </div>
 
     <script src="settings.js"></script>
