--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<style>
- 
-  @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
-  html{
-    background-color: black;
-    color: white;
-    cursor: cell;
-    font-family: "Palanquin Dark", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
 
-  a{
-    color: white;
-  }
-  
-</style>
 <head>
 <title>Bliss Cloud</title>
+ <main class="main-content" id="content">
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
 </head>
 <img src="logo-dark-mode.svg" height="150px" width="150px">
@@ -26,4 +11,4 @@
 <h2><a href="Stream-Star/index.html">MOVIES&TV</a></h2>
 <h2><a href="chatti.html">[NEW] AI Chat Bot</a></h2>
 <h2><a href="links.htmml">Links</a></h2>
-	
+	</main>
