--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <head>
 <title>Bliss Cloud</title>
- <main class="main-content" id="content">
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
 </head>
+<link rel="stylesheet" href="style.css">
+<main class="main-content" id="content">
 <img src="logo-dark-mode.svg" height="150px" width="150px">
 <h1> Bliss Cloud V 0.1.2</h1>
 <H2><a href="jace/index.html">UNBLOCKED GAMES</a></H2>
@@ -12,3 +12,29 @@
 <h2><a href="chatti.html">[NEW] AI Chat Bot</a></h2>
 <h2><a href="links.htmml">Links</a></h2>
 	</main>
+<nav class="bottom-nav">
+        <a href="#home" class="nav-item">
+            <span class="tooltip">Home</span>
+            🏠
+        </a>
+        <a href="#search" class="nav-item">
+            <span class="tooltip">Search</span>
+            🔍
+        </a>
+        <a href="#games" class="nav-item">
+            <span class="tooltip">Games</span>
+            🎮
+        </a>
+        <a href="#movies" class="nav-item">
+            <span class="tooltip">Movies</span>
+            🎬
+        </a>
+        <a href="#tv" class="nav-item">
+            <span class="tooltip">TV</span>
+            📺
+        </a>
+        <a href="#ai" class="nav-item">
+            <span class="tooltip">AI</span>
+            🤖
+        </a>
+    </nav>
