--- a/chatti.html
+++ b/chatti.html
@@ -126,6 +126,8 @@ userInput.addEventListener("keypress", (event) => {
 
 </script>
 </body>
+<br>
+<br>
 </main>
 <nav class="bottom-nav">
         <a href="#home" class="nav-item">
@@ -151,6 +153,10 @@ userInput.addEventListener("keypress", (event) => {
         <a href="#ai" class="nav-item">
             <span class="tooltip">AI</span>
             🤖
+        </a>
+         <a href="#settings" class="nav-item">
+            <span class="tooltip">Settings</span>
+            ⚙
         </a>
     </nav>
     
