--- a/chatti.html
+++ b/chatti.html
@@ -128,33 +128,34 @@ userInput.addEventListener("keypress", (event) => {
 </body>
 <br>
 <br>
+<br>
 </main>
 <nav class="bottom-nav">
-        <a href="#home" class="nav-item">
+        <a href="/" class="nav-item">
             <span class="tooltip">Home</span>
             🏠
         </a>
-        <a href="#search" class="nav-item">
+        <a href="/active" class="nav-item">
             <span class="tooltip">Search</span>
             🔍
         </a>
-        <a href="#games" class="nav-item">
+        <a href="/jace" class="nav-item">
             <span class="tooltip">Games</span>
             🎮
         </a>
-        <a href="#movies" class="nav-item">
+        <a href="/Stream-Star/movies.html" class="nav-item">
             <span class="tooltip">Movies</span>
             🎬
         </a>
-        <a href="#tv" class="nav-item">
+        <a href="/Stream-Star/tv.html" class="nav-item">
             <span class="tooltip">TV</span>
             📺
         </a>
-        <a href="#ai" class="nav-item">
+        <a href="/chatti.html" class="nav-item">
             <span class="tooltip">AI</span>
             🤖
         </a>
-         <a href="#settings" class="nav-item">
+         <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
         </a>
