--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Bliss Cloud</title>
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
 </head>
-<link rel="stylesheet" href="style.css">
+
 <main class="main-content" id="content">
 <img src="logo-dark-mode.svg" height="150px" width="150px">
 <h1> Bliss Cloud V 0.1.2</h1>
@@ -11,30 +11,39 @@
 <h2><a href="Stream-Star/index.html">MOVIES&TV</a></h2>
 <h2><a href="chatti.html">[NEW] AI Chat Bot</a></h2>
 <h2><a href="links.htmml">Links</a></h2>
+<br>
+<br>
 	</main>
-<nav class="bottom-nav">
-        <a href="#home" class="nav-item">
+  <nav class="bottom-nav">
+        <a href="/" class="nav-item">
             <span class="tooltip">Home</span>
             🏠
         </a>
-        <a href="#search" class="nav-item">
+        <a href="/active" class="nav-item">
             <span class="tooltip">Search</span>
             🔍
         </a>
-        <a href="#games" class="nav-item">
+        <a href="/jace" class="nav-item">
             <span class="tooltip">Games</span>
             🎮
         </a>
-        <a href="#movies" class="nav-item">
+        <a href="/Stream-Star/movies.html" class="nav-item">
             <span class="tooltip">Movies</span>
             🎬
         </a>
-        <a href="#tv" class="nav-item">
+        <a href="/Stream-Star/tv.html" class="nav-item">
             <span class="tooltip">TV</span>
             📺
         </a>
-        <a href="#ai" class="nav-item">
+        <a href="/chatti.html" class="nav-item">
             <span class="tooltip">AI</span>
             🤖
         </a>
+         <a href="/settings.html" class="nav-item">
+            <span class="tooltip">Settings</span>
+            ⚙
+        </a>
     </nav>
+    
+    <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
