--- a/jace/index.html
+++ b/jace/index.html
@@ -1,26 +1,42 @@
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
-    html{
-      background-color: black;
-      color: white;
-      cursor: cell;
-      font-family: "Palanquin Dark", serif;
-      font-weight: 400;
-      font-style: normal;
-      align-content: center;
-    }
-  
-    a{
-      color: white;
-    }
-    h1,h2,h3{
-        align-self: center;
-    }
-  </style>
 
+  <main>
   <h1><b>Welcome to Jace UBG</b></h1>
   <h2>A Bliss Networks Project</h2>
   <h3><a href="az.html">All Games A-Z</a></h3>
   <p>Want to Emulate a game not on the link above?</p>
   <h3><a href="emulated.html">Emulator</a></h3>
   <p>Game Count: 839</p>
+</main>
+  <nav class="bottom-nav">
+        <a href="/" class="nav-item">
+            <span class="tooltip">Home</span>
+            🏠
+        </a>
+        <a href="/active" class="nav-item">
+            <span class="tooltip">Search</span>
+            🔍
+        </a>
+        <a href="/jace" class="nav-item">
+            <span class="tooltip">Games</span>
+            🎮
+        </a>
+        <a href="/Stream-Star/movies.html" class="nav-item">
+            <span class="tooltip">Movies</span>
+            🎬
+        </a>
+        <a href="/Stream-Star/tv.html" class="nav-item">
+            <span class="tooltip">TV</span>
+            📺
+        </a>
+        <a href="/chatti.html" class="nav-item">
+            <span class="tooltip">AI</span>
+            🤖
+        </a>
+         <a href="/settings.html" class="nav-item">
+            <span class="tooltip">Settings</span>
+            ⚙
+        </a>
+    </nav>
+    
+    <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
