--- a/jace/az.html
+++ b/jace/az.html
@@ -3,7 +3,27 @@
         align-self: center;
     }
   </style>
+<main>
+  <script>
+  // Function to create and append the back button dynamically
+function createBackButton() {
+    // Create button element
+    const backButton = document.createElement('button');
+    backButton.classList.add('back-btn');
+    backButton.innerHTML = '&#8592;'; // Left Arrow Unicode
 
+    // Add an event listener for the 'click' event to go back
+    backButton.addEventListener('click', function() {
+        window.history.back();
+    });
+
+    // Append the button to the body of the document
+    document.body.appendChild(backButton);
+}
+
+// Call the function to create and add the button to the page
+createBackButton();
+</script>
 <h1>Jace UBG (Games A-Z)</h1>
 <h2>#</h2>
 <a href="files/cl100skibidistillwaterthosewhoknow.html">100 Skibidi Toilets</a><br>
@@ -758,3 +778,37 @@
 <a href="files/clzrist.html">Zrist</a><br>
 <a href="files/clzuma.html">Zuma</a><br>
 <a href="files/clzumashooter.html">Zuma Shooter</a><br>
+</main>
+  <nav class="bottom-nav">
+        <a href="/" class="nav-item">
+            <span class="tooltip">Home</span>
+            🏠
+        </a>
+        <a href="/active" class="nav-item">
+            <span class="tooltip">Search</span>
+            🔍
+        </a>
+        <a href="/jace" class="nav-item">
+            <span class="tooltip">Games</span>
+            🎮
+        </a>
+        <a href="/Stream-Star/movies.html" class="nav-item">
+            <span class="tooltip">Movies</span>
+            🎬
+        </a>
+        <a href="/Stream-Star/tv.html" class="nav-item">
+            <span class="tooltip">TV</span>
+            📺
+        </a>
+        <a href="/chatti.html" class="nav-item">
+            <span class="tooltip">AI</span>
+            🤖
+        </a>
+         <a href="/settings.html" class="nav-item">
+            <span class="tooltip">Settings</span>
+            ⚙
+        </a>
+    </nav>
+    
+    <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
