--- a/jace/az.html
+++ b/jace/az.html
@@ -4,6 +4,7 @@
     }
   </style>
 <main class="main-content">
+<body>
  <br><br><br>
 <h1>Jace UBG (Games A-Z)</h1>
 <h2>#</h2>
@@ -759,6 +760,7 @@
 <a href="files/clzrist.html">Zrist</a><br>
 <a href="files/clzuma.html">Zuma</a><br>
 <a href="files/clzumashooter.html">Zuma Shooter</a><br>
+</body>
 </main>
   <nav class="bottom-nav">
         <a href="/" class="nav-item">
