--- a/jace/az.html
+++ b/jace/az.html
@@ -3,6 +3,7 @@
         align-self: center;
     }
   </style>
+<body>
 <main class="main-content">
 <iframe src="az-main.html" height="80%" width="100%">
 </main>
@@ -36,6 +37,6 @@
             ⚙
         </a>
     </nav>
-    
+    </body>
     <link rel="stylesheet" href="/style.css">
     <script src="/settings.js"></script>
