--- a/jace/az-main.html
+++ b/jace/az-main.html
@@ -752,5 +752,7 @@
 <a href="files/clzrist.html">Zrist</a><br>
 <a href="files/clzuma.html">Zuma</a><br>
 <a href="files/clzumashooter.html">Zuma Shooter</a><br>
-<link rel="stylesheet" href"/style.css">
-<script src="settings.js"></script>
+
+
+  <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
