--- a/jace/az-main.html
+++ b/jace/az-main.html
@@ -1,3 +1,4 @@
+<body>
 <h1>Jace UBG (Games A-Z)</h1>
 <h2>#</h2>
 <a href="files/cl100skibidistillwaterthosewhoknow.html">100 Skibidi Toilets</a><br>
@@ -592,6 +593,7 @@
 <a href="files/clracingarena.html">Racing Arena</a><br>
 <a href="files/clradicalred.html">Radical Red</a><br>
 <a href="files/clraftwars.html">Raft Wars</a><br>
+<a href="file/clraftwars2.html">Raft Wars 2</a><br>
 <a href="files/clragdollarchers.html">Ragdoll Archers</a><br>
 <a href="files/clragdollio.html">Ragdoll IO</a><br>
 <a href="files/clragdollsoccer.html">Ragdoll Soccer</a><br>
@@ -752,7 +754,7 @@
 <a href="files/clzrist.html">Zrist</a><br>
 <a href="files/clzuma.html">Zuma</a><br>
 <a href="files/clzumashooter.html">Zuma Shooter</a><br>
-
+</body>
 
   <link rel="stylesheet" href="/style.css">
     <script src="/settings.js"></script>
