--- a/jace/az-main.html
+++ b/jace/az-main.html
@@ -593,7 +593,7 @@
 <a href="files/clracingarena.html">Racing Arena</a><br>
 <a href="files/clradicalred.html">Radical Red</a><br>
 <a href="files/clraftwars.html">Raft Wars</a><br>
-<a href="file/clraftwars2.html">Raft Wars 2</a><br>
+<a href="files/clraftwars2.html">Raft Wars 2</a><br>
 <a href="files/clragdollarchers.html">Ragdoll Archers</a><br>
 <a href="files/clragdollio.html">Ragdoll IO</a><br>
 <a href="files/clragdollsoccer.html">Ragdoll Soccer</a><br>
