--- a/Jace-add.html
+++ b/Jace-add.html
@@ -29,11 +29,11 @@
 </head>
 <body>
 
-    <iframe id="myIframe" src="https://example.com"></iframe>
+    <iframe id="myIframe" src="jace/az.html"></iframe>
 
     <script>
         const iframe = document.getElementById("myIframe");
-        const allowedSrc = "https://example.com";
+        const allowedSrc = "jace/az.html";
 
         // Monitor iframe src changes
         setInterval(() => {
