--- a/jace/az.html
+++ b/jace/az.html
@@ -2,12 +2,10 @@
     h1,h2,h3{
         align-self: center;
     }
-    .resizer { display:flex; margin:0; padding:0; resize:both; overflow:hidden }
-    .resizer > .resized { flex-grow:1; margin:0; padding:0; border:0 }
   </style>
 <body>
-<main class="main-content resizer">
-<iframe class="resized" src="az-main.html"></iframe>
+<main class="main-content">
+<iframe class="resized" src="az-main.html" target="_blank" ></iframe>
 </main>
   <nav class="bottom-nav">
         <a href="/" class="nav-item">
