--- a/settings.html
+++ b/settings.html
@@ -9,7 +9,7 @@
 <body>
     <main>
     <h2>Settings</h2>
-    div id="version-status">
+    <div id="version-status">
         <p id="current-version">Current version: <span id="version-text"></span></p>
     </div>
 <div>
