--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -25,7 +25,7 @@
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
-        const imdbId = urlParams.get('IMDb');
+        const imdbId = urlParams.get('TMDB');
         const s = urlParams.get('s');
         const e = urlParams.get('e');
         const iframeUrl = `embed.html#https://vidsrc.su/embed/tv/${imdbId}/${s}/${e}`;
