--- a/partners.html
+++ b/partners.html
@@ -52,20 +52,20 @@
 <body>
     <h1>Partners</h1>
     <div class="grid-container">
-        <a href="#" class="grid-item">
-            <img src="https://benrogo.net/logo.png" alt="Image 1">
+        <a href="https://benrogo.net" class="grid-item">
+            <img src="/logos/logo.png" alt="Image 1">
             <div class="label">Benrogo</div>
         </a>
-        <a href="#" class="grid-item">
-            <img src="https://cdn.discordapp.com/attachments/1340200197418127442/1350642029708709919/Untitled249_20250210231345.png?ex=67d77ae9&is=67d62969&hm=953c49061494617a642589bd8c791c38866abd888efcd5a1e92d4c7f0bfb8f65&" alt="Image 2">
+        <a href="https://mexi.rest" class="grid-item">
+            <img src="/logos/Untitled249_20250210231345.png" alt="Image 2">
             <div class="label">Mexi's Math</div>
         </a>
-        <a href="#" class="grid-item">
-            <img src="https://cdn.discordapp.com/attachments/1345950915974398024/1350642847161782512/pfp2.png?ex=67d77bac&is=67d62a2c&hm=4b9dbbebfc66edbaa5da3b4f3582303f9799bf9e9f9ee2fae2dbbf6534955a89&" alt="Image 3">
+        <a href="https://playervpn.github.io" class="grid-item">
+            <img src="/logos/pfp2.png" alt="Image 3">
             <div class="label">Orbit UBG</div>
         </a>
-        <a href="#" class="grid-item">
-            <img src="https://cdn.discordapp.com/attachments/1339441630180016209/1350644278422143049/Borcelle_1.png?ex=67d77d01&is=67d62b81&hm=3cbb723e426676db78fbda87ed2037dccc36a1b002eee482f6453347904fcb96&" alt="Image 4">
+        <a href="https://edu.ajh.college" class="grid-item">
+            <img src="/logos/Borcelle_1.png" alt="Image 4">
             <div class="label">AJH's Vault</div>
         </a>
     </div>
