--- a/chatti.html
+++ b/chatti.html
@@ -9,6 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
+     <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
 
 </head>
 <main>
@@ -155,12 +157,14 @@ userInput.addEventListener("keypress", (event) => {
             <span class="tooltip">AI</span>
             🤖
         </a>
+         <a href="/partners.html" class="nav-item">
+            <span class="tooltip">Partners</span>
+            🤝
+        </a>
          <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
         </a>
     </nav>
     
-    <link rel="stylesheet" href="/style.css">
-    <script src="/settings.js"></script>
 </html>
